fix operation's param